--- a/install
+++ b/install
@@ -44,10 +44,34 @@ function connect_to_internet() {
         read -r
         iwctl
     fi
-    
-    # menu_continue "particionar_disco"
+
     menu_continue "particion_disco"
 }
+
+function particion_disco() {
+    disks=$(lsblk -dno NAME,SIZE | awk '{print $1, $2}')
+    echo "Discos disponibles:"
+    echo "$disks"
+    read -p "Selecciona el disco a particionar: " disk_name
+    (
+        echo "g"; 
+        echo "n"; 
+        echo "1"; 
+        echo ""; 
+        echo "+512M"; 
+        echo "t"
+        echo "1"; 
+        echo "n"; 
+        echo "2"; 
+        echo ""; 
+        echo ""; 
+        echo "w";
+    ) | fdisk "/dev/$disk_name"
+    echo "Particiones creadas:"
+    lsblk "/dev/$disk_name"
+    menu_continue "disk_formating" "$disk_name"
+}
+
 
 function show_main_menu() {
     clear
@@ -72,30 +96,22 @@ function show_main_menu() {
     esac
 }
 
-# Función para particionar el disco
-function particion_disco() {
-    disks=$(lsblk -dno NAME,SIZE | awk '{print $1, $2}')
-    echo "Discos disponibles:"
-    echo "$disks"
+function disk_formating() {
 
-    read -p "Selecciona el disco a particionar: " disk_name
+    local disk_name="$1"
+    shift
+    interface=$(lsblk -o NAME,TRAN | grep "^$disk_name " | awk '{print $2}')
 
-    (
-        echo "g"; 
-        echo "n"; 
-        echo "1"; 
-        echo ""; 
-        echo "+512M"; 
-        echo "t"
-        echo "1"; 
-        echo "n"; 
-        echo "2"; 
-        echo ""; 
-        echo ""; 
-        echo "w";
-    ) | fdisk "/dev/$disk_name"
-    echo "Particiones creadas:"
-    lsblk "/dev/$disk_name"
+    if [[ "$interface" == "sata" ]]; then
+        echo "El disco $disk_name es un SSD SATA o HDD."
+    elif [[ "$interface" == "nvme" ]]; then
+        echo "El disco $disk_name es un SSD NVMe."
+    else
+        echo "No se pudo determinar la interfaz de $disk_name."
+fi
+
+    # mkfs.fat -F32 "/dev/${disk_name}1"
+    # mkfs.ext4 "/dev/${disk_name}2"
 }
 
 # Función para instalar el sistema base
