--- a/install
+++ b/install
@@ -1,5 +1,6 @@
 #!/bin/sh
 
+efi=""
 locale=$(curl -s https://ipapi.co/languages | tr ',' '\n' | head -n 1)
 timezone=$(curl -s https://ipapi.co/timezone | tr ',' '\n' | head -n 1)
 hostname=$(hostnamectl | grep "Hardware Model" | awk -F': ' '{gsub(/ /, "_", $2); print $2}')
@@ -91,13 +92,13 @@ function disk_formating() {
     interface=$(lsblk -o NAME,TRAN | grep "^$disk_name " | awk '{print $2}')
     
     if [[ "$interface" == "sata" ]]; then
-        mkfs.fat -F32 "/dev/${disk_name}1"
+        efi="${disk_name}1"
+        mkfs.fat -F32 "/dev/${efi}"
         encripting "$disk_name"
-        # mkfs.ext4 "/dev/${disk_name}2"
         elif [[ "$interface" == "nvme" ]]; then
-        mkfs.fat -F32 "/dev/${disk_name}p1"
+        efi="${disk_name}p1"
+        mkfs.fat -F32 "/dev/${efi}"
         encripting "$disk_name"
-        # mkfs.ext4 "/dev/${disk_name}p2"
     else
         echo "No se pudo determinar la interfaz de $disk_name."
         
