--- a/install
+++ b/install
@@ -129,7 +129,7 @@ function encripting() {
     fi
     
     echo "Confirmando y encriptando el disco..."
-    echo -n "$luks_pass" | cryptsetup -y -v luksFormat --force /dev/"$disk_name" --key-file -
+    echo -n "$luks_pass" | cryptsetup -y -v luksFormat /dev/"$disk_name" --key-file -
     cryptsetup open /dev/"$disk_name" cryptroot
     btrfs_partition "/dev/mapper/cryptroot"
 }
